# JsonRpc

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
JsonRpc/: db.sqlite3
JsonRpc/api_client/: services.py  tests.py  urls.py  views.py
JsonRpc/config/: settings.py  urls.py
JsonRpc/error_handler/: models.py  serializers.py  urls.py  views.py
JsonRpc/error_handler/migrations/: 0001_initial.py
JsonRpc/templates/: form.html
